Improved pkg-config, fixed install target.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,13 @@ cmake_minimum_required(VERSION 3.10)
 
 include(ExternalProject)
 
+#set(CMAKE_BUILD_TYPE Debug)
+
 project(libfizmo
-LANGUAGES C
-HOMEPAGE_URL https://fizmo.spellbreaker.org
-DESCRIPTION "fizmo interpreter core library"
-VERSION 0.8.0)
+  LANGUAGES C
+  HOMEPAGE_URL https://fizmo.spellbreaker.org
+  DESCRIPTION "fizmo interpreter core library"
+  VERSION 0.8.0)
 
 ExternalProject_Add(hyph_pattern_preparation
   SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/hyph_patterns
@@ -29,10 +31,6 @@ ExternalProject_Add(locale_data_preparation
   INSTALL_COMMAND cmake -E echo "Skipping install step."
   )
 
-SET(BINARY_NAME fizmo)
-SET(LIBRARY_VERSION_MAJOR 0)
-SET(LIBRARY_VERSION_STRING 8.0)
-
 option(ENABLE_TRACING "Enable tracing" OFF)
 #set(FIZMO_DIST_VERSION "" CACHE STRING "Fizmo's dist version")
 if (NOT(DISABLE_BABEL))
@@ -42,6 +40,9 @@ if (NOT(DISABLE_BABEL))
   #CFLAGS += "-I${LIBXML2_INCLUDE_DIR}"
   #LDADD += "-L${LIBXML2_LIBRARY} -l${LIBXML2_LIBRARIES}"
   set(pc_req_public "libxml-2.0")
+  #set(pc_req_public "LibXml2")
+else()
+  set(pc_req_public)
 endif()
 
 set (MyCSources
@@ -85,31 +86,23 @@ set (MyCSources
   src/hyph_patterns/hyph_patterns.c
   src/locales/libfizmo_locales.c
   src/locales/locale_data.c)
-add_library (fizmo ${MyCSources})
 
-SET_TARGET_PROPERTIES (
-	${BINARY_NAME} PROPERTIES
-	VERSION		${LIBRARY_VERSION_STRING}
-	SOVERSION	${LIBRARY_VERSION_MAJOR})
+add_library(fizmo ${MyCSources})
 
 install(TARGETS fizmo)
 # PUBLIC_HEADER cannot be used for TARGETS fizmo, since it doesn't keep
 # the directory tree and installs all *.h flat into "include/". So:
 
 install(DIRECTORY "${PROJECT_SOURCE_DIR}/src/" # source directory
-        DESTINATION "include" # target directory
-        FILES_MATCHING # install only matched files
-        PATTERN "*.h" # select header files
+  DESTINATION "include" # target directory
+  FILES_MATCHING # install only matched files
+  PATTERN "*.h" # select header files
 )
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc
-        DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
+  DESTINATION "lib/pkgconfig")
 
-# https://www.scivision.dev/cmake-generate-pkg-config/
-
-set(target1 ${BINARY_NAME})
 set(pc_libs_private)
 set(pc_req_private)
-#set(pc_req_public)
 configure_file(src/libfizmo.pc.in libfizmo.pc @ONLY)
 
