--- a/src/libfizmo.pc.in
+++ b/src/libfizmo.pc.in
@@ -16,7 +16,7 @@ URL: @CMAKE_PROJECT_HOMEPAGE_URL@
 Version: @PROJECT_VERSION@
 Requires: @pc_req_public@
 Requires.private: @pc_req_private@
-Cflags: -I"${includedir}"
-Libs: -L"${libdir}" -l@target1@ -lm
+Cflags: -I${includedir}
+Libs: -L"${libdir}" -lfizmo -lm
 Libs.private:
 
